# arac-hasar-v2

./: .env.example  .gitignore  ARCHITECTURE.md  DATA.md  DOCKER.md  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  render.yaml  tsconfig.base.json  vercel.json
.github/workflows/: ci.yml  deploy-free.yml  deploy.yml
apps/desktop/: README.md  index.html  package.json  (+3 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: ANALYTICS_AUDIT.md  API_GUIDE.md  AUTH_FLOW.md  AUTH_REFRESH_REVIEW.md  CODE_REVIEW_POLLING.md  DB_INSPECTION_AUDIT.md  DEPLOY_FREE.md  DEPLOY_GUIDE.md  HAFTA_10_12.md  HAFTA_1_3.md  HAFTA_4_6.md  HAFTA_7_9.md  HEALTH_EXTENSION.md  INCLUSIVE_VISUALS.md  LAUNCH_CHECKLIST.md  MODEL_GUIDE.md  OBSERVABILITY_SETUP.md  PERFORMANCE_NOTES.md  PILOT_ONBOARDING.md  PRETRAINED_MODELS.md  PROD_LAUNCH_CHECKLIST.md  QUICKSTART_DEMO.md  REPORT_TR.md  REPORT_TR_ADDENDUM.md  SECURITY.md  SECURITY_WEB_AUDIT.md  SEO_CHECKLIST.md  STACK_OBSERVABILITY.md  TESTING.md  TRACKING_POLLING.md  USER_GUIDE_TR.md  UX_FINDINGS_WEB.md  UX_MULTIFOTO_FLOW.md  WEB_PERFORMANCE.md
scripts/: DATA_README.md  dev-up.ps1  dev-up.sh  download_and_upload_pretrained.py  download_data.py  download_pretrained.py  download_severity_roboflow.py  find_roboflow_severity.py  prepare-ml-shim.ps1  prepare-ml-shim.sh  prepare_cardd_from_json.py  prepare_cardd_hf.py  requirements.txt  verify_data.py
tools/: export_models.py  regression_test.py  test_cases.yaml
(+219 files in other folders)
